Add link to Daniel's new post on applying at GDS

--- a/_posts/2015-07-19-cv-tips.md
+++ b/_posts/2015-07-19-cv-tips.md
@@ -54,7 +54,8 @@ pack?
 ## Do what they asked for
 
 Make sure you supply the requested information. In my case, I was reviewing CVs
-for a job as a developer at GDS. Our process has now changed but at the time
+for a job as a developer at GDS. [Our process has now
+changed](https://gdstechnology.blog.gov.uk/2015/07/14/applying-for-a-job-at-gds-update/) but at the time
 our job adverts said that in order to apply, you need to send "a CV, a
 CV cover letter, and a written statement of suitability explaining how you meet
 all of the competencies and specialist skills required".
