Updates and corrections to blog post
Particularly, spelling out in the alt text the checkbox message, which otherwise only appears in the image.

--- a/_posts/2018-05-20-gdpr.md
+++ b/_posts/2018-05-20-gdpr.md
@@ -33,11 +33,11 @@ We generally only email our users a few times a year, announcing the CFP, asking
 
 The first two are arguably "legitimate interest" because we have a "relevant and appropriate relationship" to the people on the list, but the last one is definitely marketing. In any case, I think it's best to be explicit.
 
-So in November last year, I added a checkbox to ask for consent. {% comment %} https://github.com/dcleal/spa-conf/pull/108 {% endcomment %}
+So in November last year, I added a checkbox to ask for consent to receiving emails. {% comment %} https://github.com/dcleal/spa-conf/pull/108 {% endcomment %}I highlighted the box so that users who hadn't seen it would have their attention drawn to it.
 
-![Checkbox asking for consent to email you about certain things](/img/consent_checkbox.png)
+![Checkbox with label text "Can we email you about the conference? We send occasional emails, for example announcing our call for papers each year. Check this box if that's OK"](/img/consent_checkbox.png)
 
-I also made it easier for new users to register. Previously when signing up for an account, you were asked to fill in a whole load of stuff including a bio. In fact you didn't need to enter any of that unless you were a session leader, in which case it would be published, and it was offputting and a hassle.
+I also made it easier for new users to register. Previously when signing up for an account, you were asked to fill in a whole load of stuff including a bio. In fact none of this info was needed unless you were a session leader, and it was offputting and a hassle to be asked for it all up front.
 
 I changed this so on first registering you are now only asked for name, email and consent to contact. If you come to edit your profile later you are given the option then to enter the rest of the info. In most cases, you would only edit your profile if your session is accepted to the conference, at which point details such as bio become relevant.
 
@@ -53,7 +53,7 @@ Like many aspects of the conference, this dates back from a couple of decades ag
 
 I changed this so that you just add the co-leader's name, and behind the scenes we figure out if they are an existing user or not. {% comment %} https://github.com/dcleal/spa-conf/pull/116 {% endcomment %}
 
-## Emailed all users to announce the CFP
+## I tested the current list
 
 Once I'd made those changes, in early December last year, I emailed all the remaining users to announce our call for papers, including an unsubscribe link and instructions on how to delete their account. This was the first time we'd emailed the list for a while.
 
@@ -75,7 +75,7 @@ In fact, of the 461 who still had a NULL value for the checkbox, 23 had logged i
 
 It was also nice to note that the majority of new users (88%) had consented to email, which was encouraging about the messaging.
 
-## Last change to sign up
+## Last chance to sign up
 
 Alongside this I'd been [updating our terms and conditions](https://github.com/spaconference/spa-website/pull/47) with the help of the other committee members.
 
