Add detail that post has changed since publication
With link to commit to show why.

--- a/_posts/2015-07-19-cv-tips.md
+++ b/_posts/2015-07-19-cv-tips.md
@@ -167,3 +167,5 @@ hiring for. This does mean that you have to revise your CV and cover letter for
 every job you apply for, but you should be used to that. You're a good
 developer, so you are already prepared to [do the hard work to make it
 simple](https://www.gov.uk/design-principles#fourth). Right?
+
+<i>This post was edited on 12/12/2018 to [add that your CV should be two pages](https://github.com/annashipman/annashipman.github.io/commit/49a0fdbe).</i>
