--- a/_posts/2019-12-24-triggers.md
+++ b/_posts/2019-12-24-triggers.md
@@ -4,11 +4,11 @@ title: Triggers
 layout: blog_post
 ---
 
-[Triggers](https://www.marshallgoldsmith.com/product/triggers-creating-behavior-that-lasts-becoming-the-person-you-want-to-be/) is a very interesting book. The subtitle says it's about creating lasting behavioural change, which I did not find it my case, but it is packed full of useful, actionable insights about day to day issues we face at work and at home. Here are my notes.
+[Triggers](https://www.marshallgoldsmith.com/product/triggers-creating-behavior-that-lasts-becoming-the-person-you-want-to-be/) is a very interesting book. The subtitle says it's about creating lasting behavioural change, which I did not find in my case, but it is full of useful, actionable insights about day-to-day issues we face at work and at home. Here are my notes.
 
 ## There will always be a crisis
 
-Marshall Goldsmith is an executive coach. He tends to work with a client on a particular issue, and they outline how long it might take (maybe a year, for example), but "I warn each client the process will take longer than they expect because there will be a crisis".
+Marshall Goldsmith is an executive coach. He tends to work with a client on a particular issue, and at the beginning he says how long it might take (maybe a year, for example), but "I warn each client the process will take longer than they expect because there will be a crisis".
 
 I loved this; we always plan optimistically, but there is *always* a crisis.
 
@@ -16,12 +16,12 @@ I loved this; we always plan optimistically, but there is *always* a crisis.
 
 He talks about the concept of situational leadership. When delegating tasks, there is a spectrum of four distinct styles.
 
-1. Directing is for employees who need a lot of specific guidance to complete the task.
-1. Coaching is for employees who want and need to learn.
-1. Supporting is for employees who have the skill to complete the task but lack confidence to do it on their own.
-1. Delegating is for employees who score high on motivation, ability and confidence.
+1. _Directing_ is for employees who need a lot of specific guidance to complete the task.
+1. _Coaching_ is for employees who want and need to learn.
+1. _Supporting_ is for employees who have the skill to complete the task but lack confidence to do it on their own.
+1. _Delegating_ is for employees who score high on motivation, ability and confidence.
 
-This reflects a useful discussion I had with a previous mentor about how to delegate to different members of a team. I've [previously written about delegating to a team](/jfdi/delegating-to-a-team.html) but I got hung up on how to manage how much I helped out once tasks had been picked up. My mentor at the time pointed out that treating everyone as an equal member of the team did not mean treating them all exactly the same; how much support is required varies from person to person and task to task.
+This reflects a useful discussion I had with a previous mentor about how to delegate to different members of a team. I've [previously written about delegating to a team](/jfdi/delegating-to-a-team.html) but I got hung up on how to manage how much I helped out once tasks had been picked up. My mentor at the time pointed out that treating everyone as an equal member of the team did not mean treating them all exactly the same; how much support is required varies from person to person and from task to task.
 
 ## It is very insightful about the balance between now and future
 
@@ -56,17 +56,17 @@ Anything we try and address does need some investment of time or effort; so I fo
 
 He talks about the parable of [the empty boat](https://digital-dharma.net/buddhism/empty-rowboat/) to help you think about AIWATT.
 
-Altogether less Zen is how I sometimes think of frustrating things that happen at work; The Godfather: it's not personal, it's business. (When I was looking up the exact quote for this post, I found that the scene I was actually thinking of was "Tell Mike it was only business. I always liked him.").
+Altogether less Zen is how I sometimes think of frustrating things that happen at work: _The Godfather_. It's not personal, it's business. (When I was looking up the exact quote for this post, I found that the scene I was actually thinking of was "Tell Mike it was only business. I always liked him.").
 
 ## Be positive
 
-He describes optimism as a magic move, people are automatically drawn to the confident individual who believes everything will work out.
+He describes optimism as a "magic move". People are automatically drawn to the confident individual who believes everything will work out.
 
 Optimism almost makes the change process a self fulfilling prophecy.
 
 He fines his clients for cynicism and sarcasm. He says we can be helpful, harmful or neutral, and complaining is not helpful.
 
-He also recommends having some kind of positive trigger that you can refer to. He has an incredibly moving story about a photo that he keeps around to remind him that things aren't that bad, to be grateful for what he has, that he describes as a positive trigger in an otherwise negative environment.
+He also recommends having some kind of positive trigger that you can refer to. He has a heartbreaking story about a photo that he keeps around to remind him that things aren't that bad, to be grateful for what he has. He describes it as something that can act as a positive trigger in an otherwise negative environment.
 
 ## Questions for one-to-ones with reports
 
@@ -79,19 +79,25 @@ He had a suggestion of a really interesting structure for one-to-ones.
 - How can I help you?
 - How can you help me?
 
-This was specifically for someone who had a chaotic leadership style and needed this kind of structure, but I thought these were really interesting questions to focus on and covered some areas that you could easily gloss over. 
+This was specifically for someone who had a chaotic leadership style and needed this kind of structure, but I thought these were really interesting questions to focus on. It makes you talk about some important areas you could easily gloss over otherwise.
 
-I’ve written before about [usefully structuring one-to-ones](https://www.annashipman.co.uk/jfdi/line-management-questions.html). In my current one-to-ones with reports we always exchange feedback; one positive and one constructive each for me and for them, and I like the idea of incorporating some of these other questions. 
+I’ve written before about [structuring one-to-ones](https://www.annashipman.co.uk/jfdi/line-management-questions.html). In my current one-to-ones with reports we start by exchanging feedback: they give me one positive and one constructive piece of feedback, then I do the same for them. I like the idea of incorporating some of these other themes.
 
-## Thinking about what to stop
+## Thinking about what to stop
 
-Asking “what do we need to eliminate” fosters agreement more quickly than “what’s wrong”. The former triggers imagining a positive course of action. The other triggers whining and complaining. 
+Asking "what do we need to eliminate” fosters agreement more quickly than “what’s wrong”. The former triggers imagining a positive course of action. The latter triggers whining and complaining.
 
-He talks about a “wheel of change” where you can choose exactly one thing each to create/preserve/eliminate/accept; which helps focus the mind on the bigger changes you want to make.
+He talks about a “wheel of change”. You choose one thing to create, one to preserve, one to eliminate and one to accept. This helps focus the mind on the bigger changes you want to make.
 
-## Asking questions to increase happiness
+## This book is not just about work
 
-He talks a lot about how being engaged in something, and being an active participant in trying to improve things, makes you happier and more productive. So for example, when asking employees whether they have set clear goals, active questions lead to better results: "Have you done your best to set clear goals for yourself?" rather than "Do you have clear goals?", which invites you to pass the blame to the employer.
+As I mentioned in my notes on [What Got You Here Won't Get You There](/jfdi/what-got-you-here.html), Triggers talks a lot about your life outside of work, and even talks about how to be happy; both of which I've not seen in other management books.
+
+For example, he talks about how you might be professional at work, but "an amateur at home"; describing several stories about executives who were brilliant at work but poor spouses, parents or friends.
+
+## Active questions to increase happiness
+
+He talks a lot about how being engaged in something, and being an active participant in trying to improve things, makes you happier and more productive. So for example, when asking employees whether they have set clear goals, active questions lead to better results. Instead of asking "Do you have clear goals?", which invites people to pass the blame to the employer, ask "Have you done your best to set clear goals for yourself?"
 
 He also suggests self-questioning, to help yourself stay engaged. For example, he suggests that in boring meetings, you regularly ask yourself the following questions:
 
@@ -99,12 +105,6 @@ He also suggests self-questioning, to help yourself stay engaged. For example, h
 - Did I do my best to find meaning?
 - Did I do my best to build positive relationships?
 - Did I do my best to be fully engaged?
-
-## This book is not just about work
-
-As I mentioned in my notes on [What Got You Here Won't Get You There](/jfdi/what-got-you-here.html), Triggers talks a lot about your life outside of work, and even talks about how to be happy; both of which I've not seen in other management books.
-
-For example, he talks about how you might be professional at work, but "an amateur at home"; describing several stories about executives who were brilliant at work but poor spouses, parents or friends.
 
 ## Daily active questions
 
@@ -114,16 +114,20 @@ He actually pays someone to phone him every night at 10pm to get his scores.
 
 One example he gives is of someone who finds the sound of clinking ice cubes extremely annoying, such that he doesn’t enjoy a drink with his wife to relax. This person trains themselves to put up with it using daily questions. Other examples involve losing weight, or improving some aspect of work.
 
-We favour self discipline - doing good things - over self control - saying no to bad things. Or the other way round (everyone has a preference). So phrasing daily questions a certain way can help.
+Some people favour self discipline (doing good things) over self control (saying no to bad things) and some the other way round – everyone has a preference. So phrasing daily questions a certain way can help.
 
 ## So, did I change?
 
-What I found interesting about this book was that it was basically a self-help book (which I don’t object to, but don’t generally reach for) dressed up as a business book (which I am very into reading). 
+I did try the daily questions.
 
-I didn’t agree with everything he said, but there were a lot of really interesting ideas about how to improve various aspects of one’s life.
+First I started out as he recommends, with about 10 questions. To start with, I did notice myself trying throughout the day to make the changes I had committed to, in order to be able to respond positively to that question in the evening. However, 10 questions on a 10 point scale was too many and felt like a drag, and after a week or so, the initial effect of wanting to give a good answer wore off.
 
-I did try the daily questions. First I started out as he does, with about 10 questions, which was too many and felt like a drag, though I did notice initially that I was trying throughout the day to make the changes I had committed to in order to be able to respond positively to that question in the evening. However, it continued to feel like a drag, and the initial effect of trying to give a good answer wore off. I tried reducing the number of questions, and then changing it from a 10 point scale to a simple yes/no, but after some weeks, gave up on the project.
+I tried reducing the number of questions, and then changing it from a 10 point scale to a simple yes/no, but after some weeks, gave up on the project.
 
 In summary, I don’t think his method worked for me. There is something in it though; identifying what it is you want to change, and then working out how to remind yourself daily what those things are, and reward yourself when you do change.
 
-And other than that, it was a very interesting book, and it was definitely worth my time to read it.
+## Behavioural change aside, it was good
+
+What I found interesting about this book was that it was basically a self-help book (which I don’t object to, but don’t generally reach for) slightly disguised as a strictly business book (which I am very into reading).
+
+I didn’t agree with everything he said, but there were a lot of really interesting ideas about how to improve various aspects of one’s life. It was definitely worth my time.
