--- a/_posts/2019-12-24-triggers.md
+++ b/_posts/2019-12-24-triggers.md
@@ -124,7 +124,9 @@ First I started out as he recommends, with about 10 questions. To start with, I 
 
 I tried reducing the number of questions, and then changing it from a 10 point scale to a simple yes/no, but after some weeks, gave up on the project.
 
-In summary, I don’t think his method worked for me. There is something in it though; identifying what it is you want to change, and then working out how to remind yourself daily what those things are, and reward yourself when you do change.
+In summary, I don’t think his method worked for me.
+
+There is something in it though; identifying what it is you want to change, working out how to remind yourself daily what those things are, and rewarding yourself when you do change.
 
 ## Behavioural change aside, it was good
 
