--- a/_posts/2019-12-31-slack.md
+++ b/_posts/2019-12-31-slack.md
@@ -12,7 +12,7 @@ Using the analogy of a [sliding tile puzzle](http://www.jeanierhoades.com/wp-con
 
 By seeming to thriving under pressure you put pressure on your peer managers. 
 
-## Leadership and strategy
+## Leadership and strategy
 
 Management by objectives guides you to make tactical adjustments only, under the limitation that you don’t mess with current strategy whatever it might be. 
 
@@ -28,11 +28,11 @@ Being safe to fail means making explicit provision for lots of small but expensi
 
 You can’t count on all your risks paying off; you need to set aside time and money. The science of risk management guides you as to how much.
 
-## Risk management is probabilistic. 
+## Risk management is probabilistic
 
 The explicit declaration of uncertainties allow you to manage a sensible risk reserve across the whole portfolio. Organisations can’t be aggressive about risk-taking without meaningful assessment of the extent of the uncertainties. Without sensible risk management, organisations become risk averse.
 
-## How to maintain a risk register
+## How to maintain a risk register
 
 1. List each risk
 2. Have an ongoing process for discovering new risks
@@ -50,7 +50,7 @@ You may have to undertake activity that you won’t need if risks don’t materi
 
 You need the resources for transformational work, and you’ll never get them if you keep on doing non-transformational stuff.
 
-## You need slack to be able to get things done
+## You need slack to be able to get things done
 
 The difference between the time it takes you to arrive at all prudent speed and breakneck speed is slack. Slack is what helps you arrive quickly but with an unbroken neck. 
 
