Add link to book and name of author!

--- a/_posts/2023-06-26-7-habits.md
+++ b/_posts/2023-06-26-7-habits.md
@@ -4,7 +4,7 @@ title: The 7 Habits of Highly Effective People
 layout: blog_post
 ---
 
-I have recently read The 7 Habits of Highly Effective People. It was not what I'd expected, and very good. Here are my notes.
+I have recently read [The 7 Habits of Highly Effective People](https://uk.bookshop.org/p/books/the-7-habits-of-highly-effective-people-revised-and-updated-30th-anniversary-edition-stephen-r-covey/3555997). It was not what I'd expected, and very good. Here are my notes.
 
 ## A lot of it seems familiar
 
@@ -18,7 +18,7 @@ The first few chapters of the book are really about how you are as a person. "In
 
 This is not at all what is implied by the title; it is indeed more self-helpy than your standard business book.
 
-He talks about the personality ethic (i.e. techniques) vs the character ethic (i.e. things like integrity, humility). His contention is that it's only the latter that will actually make a difference. If you follow techniques but they don't come "inside out" then people will be able to tell.
+The author, Stephen R. Covey, talks about the personality ethic (i.e. techniques) vs the character ethic (i.e. things like integrity, humility). His contention is that it's only the latter that will actually make a difference. If you follow techniques but they don't come "inside out" then people will be able to tell.
 
 "We see the world not as it is but as we are". He says character is a composite of habits.
 
