Add missing tags
I noticed that only three posts didn't have tags, so I've added the closest approximation for these ones.

--- a/_posts/2023-06-26-7-habits.md
+++ b/_posts/2023-06-26-7-habits.md
@@ -1,6 +1,7 @@
 ---
 anchor_id: 7-habits
 title: The 7 Habits of Highly Effective People
+tags: [Career development, Book notes]
 layout: blog_post
 ---
 
