Better link for Jon Slade

--- a/_posts/2020-10-01-selling.md
+++ b/_posts/2020-10-01-selling.md
@@ -5,7 +5,7 @@ tag: Strategy
 layout: blog_post
 ---
 
-Even if we don't work in sales, we often need to sell something: an idea, a course of action, or ourselves (e.g. in a job interview). It's a useful skill to have in your toolbox. I recently had a very useful conversation with the excellent [Jon Slade](https://twitter.com/sladejon), who is the Chief Commercial Officer at the Financial Times, and he outlined some sales techniques.
+Even if we don't work in sales, we often need to sell something: an idea, a course of action, or ourselves (e.g. in a job interview). It's a useful skill to have in your toolbox. I recently had a very useful conversation with the excellent [Jon Slade](https://www.linkedin.com/in/jon-slade-62b793/), who is the Chief Commercial Officer at the Financial Times, and he outlined some sales techniques.
 
 ## Let me take away that pain you feel
 
